yamls/catalog-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: catalog-svc
spec:
  selector:
    app: catalog
  ports:
    - name: 'http'
      port: 4000
      targetPort: 4000
---
