yamls/jenkins-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: jenkins-svc
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
kind: Endpoints
apiVersion: v1
metadata:
  name: jenkins-svc
subsets:
  - addresses:
      - ip: 10.98.255.40
    ports:
      - port: 8080
