yamls/mysql-db.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
spec:
  selector:
    app: mysql
  ports:
    - name: 'browser'
      port: 3306
      targetPort: 3306
---
