yamls/neo4j-db.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: neo4j-svc
spec:
  selector:
    app: neo4j
  ports:
    - name: 'browser'
      port: 7474
      targetPort: 7474
    - name: 'bolt'
      port: 7687
      targetPort: 7687
---
