yamls/order-service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-deployment
  labels:
    app: orders
spec:
  replicas: 2
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
        - image: tecstaurant/order-service:latest
          imagePullPolicy: 'Always'
          name: orders
          resources:
            limits:
              cpu: '100m'
            requests:
              cpu: '100m'
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: order-svc
spec:
  selector:
    app: orders
  ports:
    - name: 'http'
      port: 8080
      targetPort: 8080
---
