yamls/user-service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deployment
  labels:
    app: users
spec:
  replicas: 2
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      containers:
        - image: tecstaurant/user-service:latest
          imagePullPolicy: 'Always'
          name: users
          resources:
            limits:
              cpu: '100m'
            requests:
              cpu: '100m'
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: user-svc
spec:
  selector:
    app: users
  ports:
    - name: 'http'
      port: 3000
      targetPort: 3000
---
