yamls/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.org/websocket-services: 'weave-svc'
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: ingress-main
spec:
  rules:
    - host: dashboard.tecstaurant.com
      http:
        paths:
          - path: /
            backend:
              serviceName: weave-svc
              servicePort: 80
    - host: catalog.tecstaurant.com
      http:
        paths:
          - path: /
            backend:
              serviceName: catalog-svc
              servicePort: 4000
    - host: users.tecstaurant.com
      http:
        paths:
          - path: /
            backend:
              serviceName: user-svc
              servicePort: 3000
